[project]
name = "chipsai-mcp"
version = "1.0.1"
description = "MCP server for ChipsAI — manage chatbots, conversations, documents, and AI models from any MCP client"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Francesco Gasparetto", email = "fgasparetto@gmail.com" }]
readme = "README.md"
keywords = ["mcp", "model-context-protocol", "chipsai", "chatbot", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/fgasparetto/chipsai-mcp"
Repository = "https://github.com/fgasparetto/chipsai-mcp"
Issues = "https://github.com/fgasparetto/chipsai-mcp/issues"

[project.scripts]
chipsai-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]
